--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,19 @@
     text-align: center;
     font-size: 2.4rem;
   }
+
+  img {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 200px;
+  }
 </style>
 
 <main class="main">
+  <div>
   <h1>{{this.title}}</h1>
+  <img [src]="image" alt="Bridgelabz Logo" />
+</div>
 </main>
 <router-outlet />
