--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 <main class="main">
   <div>
   <h1>{{this.title}}</h1>
-  <img [src]="image" alt="Bridgelabz Logo" />
+  <img [src]="image" (click)="onClick($event)" alt="Bridgelabz Logo:a bridge to employment through lab works"/>
 </div>
 </main>
 <router-outlet />
