--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,23 @@
     width: 200px;
     height: 200px;
   }
+  input {
+    display: block;
+    margin: 0 auto;
+    padding: 10px;
+    width: 200px;
+    font-size: 1.2rem;
+  }
 </style>
 
 <main class="main">
   <div>
-  <h1>{{this.title}}</h1>
+  <h1>Hello {{this.userName}} From Bridgelabz</h1>
   <img [src]="image" (click)="onClick($event)" alt="Bridgelabz Logo:a bridge to employment through lab works"/>
+</div>
+
+<div>
+    <input type="text" [(ngModel)]="userName" placeholder="Enter your name" />
 </div>
 </main>
 <router-outlet />
